<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/material_wallpaper"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin_little">

        <View
            android:id="@+id/DETAILS_circle"
            android:transitionName="@string/transition_name_circle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/circle"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/DETAILS_name"
            android:transitionName="@string/transition_name_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Oscar"
            android:layout_toRightOf="@+id/DETAILS_circle"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_centerVertical="true"
            android:textColor="#000"
            android:textSize="25sp"
            android:ellipsize="end"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/DETAILS_apellido1"
            android:transitionName="@string/transition_name_apellido1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Moreno"
            android:layout_toRightOf="@+id/DETAILS_name"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_little"
            android:layout_centerVertical="true"
            android:textColor="#000"
            android:textSize="25sp"
            android:ellipsize="end"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/DETAILS_apellido2"
            android:transitionName="@string/transition_name_apellido2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sánchez"
            android:layout_toRightOf="@+id/DETAILS_apellido1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_little"
            android:layout_centerVertical="true"
            android:textColor="#000"
            android:textSize="25sp"
            android:ellipsize="end"
            android:maxLines="1"/>

    </RelativeLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin_little"
        android:orientation="horizontal">
        <TableRow
            android:id="@+id/PHONE_ROW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin_little">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone_black_36dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin_little"
                android:layout_gravity="center"
                android:contentDescription="@string/phone"/>
            <TextView
                android:id="@+id/DETAILS_phone"
                android:transitionName="@string/transition_name_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="+34 693011192"
                android:textColor="#9f9f9f"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow
            android:id="@+id/MAIL_ROW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin_little">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email_black_36dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin_little"
                android:layout_gravity="center"
                android:contentDescription="@string/email"/>
            <TextView
                android:id="@+id/DETAILS_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="oscar@mail.com"
                android:textColor="#9f9f9f"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow
            android:id="@+id/ADDRESS_ROW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin_little">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_home_black_36dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin_little"
                android:layout_gravity="center"
                android:contentDescription="@string/address"/>
            <TextView
                android:id="@+id/DETAILS_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="c/Avutarda 2 - Sevilla la Nueva"
                android:textColor="#9f9f9f"
                android:textSize="20sp"/>
        </TableRow>
    </TableLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/del"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:contentDescription="@string/new_contact"
        android:elevation="6dp"
        android:src="@drawable/pencil"
        android:transitionName="@string/transition_name_fab"
        android:tint="@android:color/white"
        app:backgroundTint="@color/colorAccent" />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:contentDescription="@string/new_contact"
        android:elevation="6dp"
        android:src="@drawable/delete"
        android:tint="@android:color/white"
        app:backgroundTint="@android:color/holo_red_light" />
    </RelativeLayout>
</LinearLayout>

