<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="82dp"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="?android:selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical" >

    <View
        android:id="@+id/CONTACT_circle"
        android:transitionName="@string/transition_name_circle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/circle"
        android:text="O"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:elevation="4dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/CONTACT_circle"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/CONTACT_name"
                android:transitionName="@string/transition_name_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="Oscar"
                android:textColor="#000"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/CONTACT_apellido1"
                android:transitionName="@string/transition_name_apellido1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="Moreno"
                android:textColor="#000"
                android:textSize="18sp"
                android:layout_toRightOf="@+id/CONTACT_name"/>

            <TextView
                android:id="@+id/CONTACT_apellido2"
                android:transitionName="@string/transition_name_apellido2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sánchez"
                android:textColor="#000"
                android:textSize="18sp"
                android:layout_toRightOf="@+id/CONTACT_apellido1"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/CONTACT_phone"
            android:transitionName="@string/transition_name_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+34 693011192"
            android:textColor="#9f9f9f"
            android:textSize="15sp"/>

    </LinearLayout>

</RelativeLayout>
